# neojot

./: .eslintrc.cjs  .prettierrc  README.md  eslint.config.mjs  package-lock.json  package.json  renovate.json  vite.config.ts
.github/workflows/: node.yml  release.yml  rust.yml
docs/: HACKING.md  ShortcutKeys.md  tauri2.md
public/assets/: manual.md
public/assets/yet-another-migemo-dict/: README.md
public_html/: index.html
src/: App.svelte  Stores.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: excalidraw  excalidraw.md
src-tauri/assets/yet-another-migemo-dict/: README.md  migemo-compact-dict
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_item.rs  git.rs  main.rs  migemo.rs  openai.rs
src/lib/: ArchiveView.svelte  CalendarView.svelte  CardItem.svelte  CardView.svelte  ClearableSearchBox.svelte  ConfigurationView.svelte  EntryView.svelte  FileCardItem.svelte  FileItem.ts  FileListItem.svelte  InputBox.svelte  Line.ts  LinkCards.svelte  Links.test.ts  Links.ts  ListView.svelte  LogView.svelte  Message.ts  MessageItem.svelte  OutlineNode.test.ts  OutlineNode.ts  TaskView.svelte
src/lib/calendar/: CalendarTable.svelte  calendar-utils.ts
src/lib/card/: CardItem.svelte  CardUtils.test.ts  CardUtils.ts  FileCardItem.svelte
src/lib/excalidraw/: Excalidraw.svelte  ExcalidrawUtils.ts  ExcalidrawView.svelte  ReactComponent.svelte
src/lib/file_item/: AutoLinks.ts  FileItem.test.ts  FileItem.ts  FileList.svelte  FileListItem.svelte  Search.test.ts  Search.ts
src/lib/git/: GitCommands.ts
src/lib/link/: LinkCards.svelte  Links-case-insensitive.test.ts  Links.test.ts  Links.ts
src/lib/markdown/: AliasPlugin.ts  BasicCodeMirror6.svelte  CoemFromLink.ts  DuplicatedNotes.svelte  EntryView.svelte  GotoLinkWidget.ts  ImageViewWidget.ts  InternalWikiLink.ts  KeyHandler.ts  KeywordHighlight.test.ts  KeywordHighlight.ts  LinkPlugin.ts  MermaidWidget.ts  TaskButton.svelte  TaskPlugin.svelte.ts  TaskPlugin.ts  TaskWidgetInner.svelte  TodoWidget.ts
src/lib/openai/: OpenAIView.svelte  Prompt.ts
src/lib/repository/: MessageRepository.ts  NodeRepository.ts
src/lib/search/: BasicClearableSearchBox.svelte  ClearableSearchBox.svelte  Migemo.test.ts  Migemo.ts
src/lib/task/: Task.test.ts  Task.ts  TaskIcon.svelte  TaskItem.svelte
src/lib/utils/: Debounce.ts
src/lib/views/: ArchiveView.svelte  CalendarView.svelte  CardView.svelte  ConfigurationView.svelte  ListView.svelte  ManualView.svelte  MenuView.svelte  NetworkView.svelte  QuickPadView.svelte  TaskView.svelte
