[package]
name = "neojot"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.11", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
simplelog = "0.12.2"
anyhow = "1.0.80"
dirs = "5.0.1"
open = "5.1.2"
url = "2.5.0"
tauri-plugin-fs = "2.0.0-beta.2"
tauri-plugin-dialog = "2.0.0-beta.2"
tauri-plugin-autostart = "2.0.0-beta.2"
regex = "1.10.3"
git2 = "0.18.2"
chrono = "0.4.35"
rustmigemo = { git = "https://github.com/oguna/rustmigemo.git", rev = "baf377c499879b1176d89a881a0de4659fddb220" }
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
