[package]
name = "neojot"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.13", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.17", features = [] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
log = "0.4.21"
simplelog = "0.12.2"
anyhow = "1.0.82"
dirs = "5.0.1"
open = "5.1.2"
url = "2.5.0"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-autostart = "2.0.0-beta.5"
regex = "1.10.4"
git2 = "0.18.3"
chrono = "0.4.38"
lazy_static = "1.4.0"
openai = "1.0.0-alpha.14"
tokio = "1.37.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
