[package]
name = "neojot"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
log = "0.4.21"
simplelog = "0.12.2"
anyhow = "1.0.82"
dirs = "5.0.1"
open = "5.1.2"
url = "2.5.0"
tauri-plugin-fs = "2.0.3"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-autostart = "2.0.1"
tauri-plugin-notification = "2.0.1"
regex = "1.10.4"
git2 = "0.20.0"
chrono = "0.4.38"
lazy_static = "1.4.0"
tokio = "1.43.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
